--- a/_themes/sphinx_italia_theme/static/css/theme.css
+++ b/_themes/sphinx_italia_theme/static/css/theme.css
@@ -5515,6 +5515,7 @@ div[class^='highlight'] pre {
 }
 
 .wy-nav-content {
+  padding: 1.618em 3.236em;
   height: 100%;
   max-width: 800px;
   margin: auto;
