--- a/_themes/sphinx_italia_theme/static/css/theme.css
+++ b/_themes/sphinx_italia_theme/static/css/theme.css
@@ -4476,8 +4476,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
 .wy-table-responsive:last-child {
   margin-bottom: 24px;
 }
-
-.wy-table-responsive table {
+.wy-table-responsive .footnote {
   margin-bottom: 0 !important;
 }
 .wy-table-responsive table td, .wy-table-responsive table th {
