Adv banner removal

--- a/_themes/sphinx_italia_theme/static/css/theme.css
+++ b/_themes/sphinx_italia_theme/static/css/theme.css
@@ -6607,4 +6607,8 @@ body.pushy-open-left {
   margin: -54px 0 0;
 }
 
+div.rst-pro {
+  display: none !important;
+}
+
 /*# sourceMappingURL=theme.css.map */
